this commit is so big that i forgot all the data that i rearranged and changed, add correct styles, add font, input and many more, this is the baseline to start doing the logic behind everything

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,28 +1,128 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: rgb(250, 247, 247);
+    font-family: 'Comfortaa', cursive;
 }
 
 body{
-    color: white;
-    font-family: 'Comfortaa', cursive;
+    color: rgb(0, 0, 0);
 }
 
 header, footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 28px;
+    padding-bottom: 28px;
 }
 
 main {
-    align-items: center;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
 }
 
+.colorPicker {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    width: 100px;
+    height: 100px;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.colorPicker::-webkit-color-swatch {
+    border-radius: 15px;
+    border: none;
+}
+
+.colorPicker::-moz-color-swatch {
+    border-radius: 15px;
+    border: none;
+}
+
+input, button {
+    transition: transform 0.2s ease-in-out;
+}
+
+button {
+    color: rgb(0, 0, 0);
+    padding: 8px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(250, 247, 247);
+    cursor: pointer;
+    height: 35px;
+    width: 100px;
+    /* position: absolute; */
+}
+
+.buttons {
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+button:hover {
+    transform: scale(1.06);
+    box-shadow: -6px 6px 6px rgba(17, 17, 17, 0.355);
+    border: rgb(0, 0, 0) 1px solid;
+    background-color: black;
+    color: white;
+}
+
+.rightSide:hover {
+    box-shadow: 6px 6px 6px rgba(17, 17, 17, 0.355);
+}
+
+input:hover {
+    transform: scale(1.06);
+}
+
+#size {
+    margin-bottom: 8px;
+}
+
+.size {
+    -webkit-appearance: none;
+    border-radius: 20px;
+    height: 6px;
+    width: 100px;
+    border: black solid 0.3px;
+    background-color: white;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 25px;
+    border: black solid 0.3px;
+    background-color: white;
+}
+
+input[type='range']::-webkit-slider-thumb:hover {
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 25px;
+    border: rgb(252, 136, 4);
+    background-color: rgb(252, 136, 4);
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+  }
+
 #title {
+    font-size: 32px;
     padding-top: 10px;
 }
 
@@ -30,31 +130,39 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 4px;
+    border-radius: 4px;
+    box-shadow: 6px 6px 6px rgba(17, 17, 17, 0.355);
+    border:solid 3px rgba(157, 155, 153, 0.284);
 }
 
 #container {
-    /* border: solid salmon;
     height: 650px;
-    width: 650px; */
+    width: 650px;
     display: grid;
-    grid-template-columns: repeat(var(--rows), 7px);
-    grid-template-rows: repeat(var(--cols), 7px);
+    grid-template-columns: repeat(var(--rows), 6.5px);
+    grid-template-rows: repeat(var(--cols), 6.5px);
 }
 
 .box {
     border: solid .01px black;
     cursor: pointer;
+    background-color: aqua;
 }
 
 a {
-    color: white;
+    margin-left: 5px;
+    color: rgb(0, 0, 0);
     font-size: 20px;
 }
 
 a:hover {
-    color: rgb(255, 143, 16);
+    transition: 0.3s;
+    color: rgb(252, 136, 4);;
 }
 
 .me {
-    color: rgb(255, 143, 16);
+    color: rgb(0, 0, 0);
+    display: flex;
+    font-size: 14px;
 }
